# pypi-packages-mcp-server

./: .editorconfig  .gitignore  CODE_OF_CONDUCT.md  CONTRIBUTING.md  HOW_TO_APPLY.md  LICENSE  README.md  pyproject.toml  run-mcp.bat  run-mcp.sh  run-tests.bat
.kiro/specs/python-package-mcp-server/: design.md  requirements.md  tasks.md
.kiro/steering/: product.md  structure.md  tech.md
demo/: hackathon-slides.md
docs/: README_SNIPPETS.md
src/mcp_server/: errors.py  models.py  package_manager.py  project_analyzer.py  server.py  utils.py
tests/: conftest.py  test_errors.py  test_integration.py  test_models.py  test_package_manager.py  test_project_analyzer.py  test_server.py  test_utils.py
